2015-12-19  Gabriel Dos Reis  <gdr@axiomatics.org>

	* ipr/interface: Introduce ipr::Lexicon, split from ipr::Unit.
	* ipr/impl: Implement.

2015-12-17  Gabriel Dos Reis  <gdr@axiomatics.org>

	* ipr/interface: Add Optional<T>.  Use it to capture commonality
	of optional node properties.
	* ipr/impl: Propagate changes.

2015-12-16  Gabriel Dos Reis  <gdr@axiomatics.org>

	* ipr/interface: Replace Type_sizeof and Expr_sizeof with Sizeof.
	Similarly, replace Type_typeid and Expr_typeid with Typeid.
	* ipr/impl: Propagate changes.  Implement.

2015-12-15  Gabriel Dos Reis  <gdr@axiomatics.org>

	* ipr/interface: Add Expansion for pack expansions.
	* ipr/impl: Implement.

2015-12-14  Gabriel Dos Reis  <gdr@axiomatics.org>

	* ipr/interface: Sequence<T>::begin and Sequence<T>::end no longer
	virtual -- they shouldn't have been ever since get() was
	customization point.

2015-12-14  Gabriel Dos Reis  <gdr@axiomatics.org>

	* ipr/interface: Move Decl::Specifier to toplevel.  Rename to
	DeclSpecifiers. Now an enum class with fixed underlying type.

2015-12-14  Gabriel Dos Reis  <gdr@axiomatics.org>

	* ipr/interface: Add ipr::Auto type node.

2015-12-14  Gabriel Dos Reis  <gdr@axiomatics.org>

	* ipr/interface: 'auto' is no longer a storage-class specifier in
	C++11 and up.

2015-12-14  Gabriel Dos Reis  <gdr@axiomatics.org>

	* ipr/interface: Move Type::Qualifier to toplevel.  Rename to
	Type_qualifier. Adjust users.

2015-12-14  Gabriel Dos Reis  <gdr@axiomatics.org>

	* ipr/interface: Add TokenCategory, TokenValue, Token, Attribute,
	BasicAttribute, ScopedAttribute, LabeledAttribute,
	CalledAttribute, and Attribute::Visitor.
	* ipr/impl: Implement.

2015-11-29  Gabriel Dos Reis  <gdr@axiomatics.org>

	* ipr/interfce: Modify ipr::Enum to account for scoped enumerations.
	* ipr/impl: Implement modifications.

2015-11-22  Gabriel Dos Reis  <gdr@axiomatics.org>

	* Move all source header files into dedicated ipr/ directory.
	Simplifies build and installation setup.
